tests/NormalTests/paczka1/small_fuzzy/55694374.err
Error in line 4: A464 S565 78,5
Error in line 8: 7DfFhiH S565 -3,90
Error in line 13: U95B A464 18,7
